tests/baselines/reference/continueTarget6.errors.txt
==== tests/cases/compiler/continueTarget6.ts (1 errors) ====
    while (true) {
      continue target;
      ~~~~~~~~~~~~~~~~
!!! continueTarget6.ts(2,3): error TS1106: Jump target not found.
    }